--- a/css/calendar.shaolin-monastery.css
+++ b/css/calendar.shaolin-monastery.css
@@ -9,7 +9,7 @@
     --secondary-color: #DAA520;
     --hover-color: #FF4500;
     --border-color: #A9A9A9;
-    --text-color: #4B3621;
+    --text-color: #f4ec98;
     --background-color: #F5DEB3;
     --event-marker-color: #8B4513;
     --event-marker-hover: #CD5C5C;
